<resources>
    <string name="app_name">SNS</string>
    <string name="str_sign_in">Sign In</string>
    <string name="str_email">Email</string>
    <string name="str_password">Password</string>
    <string name="username">Username</string>
    <string name="str_or">OR</string>
    <string name="str_instacharm">Instacharm</string>
    <string name="str_sign_up">Sign Up</string>
    <string name="str_logout">Logout</string>
    <string name="str_manage_profile">Manage Profile</string>
    <string name="str_cd_logout_button">LogoutButton</string>
    <string name="str_cd_manage_profile_button">Manage Profile Button</string>
    <string name="str_profile">Profile</string>
    <string name="str_name">Name</string>
    <string name="str_username">Username</string>
    <string name="str_useremail">Email</string>
    <string name="str_update">Update</string>
    <string name="str_change">Make Changes</string>
    <string name="str_save">SAVE</string>
</resources>